# pg-json-serdes

./: .gitignore  CMakeLists.txt  README.md  main.cpp
cmake/templates/: MetaSql.h.in
lib/inc/pfs/: Catalogue.h  Cursor.h  IBuffer.h  IParamSetter.h  IPgReader.h  IPgWriter.h  IResult.h  PgFunc.h  PgType.h
lib/inc/pfs/utils/: DefaultParamSetter.h  GeneralParamSetter.h  PgResultWrapper.h  PgTextReader.h  PgTextWriter.h  RawCursor.h  StringBuffer.h
lib/inc/pg_json/: Buffer.h  Catalogue.h  Converter.h  Cursor.h  IBuffer.h  IParamSetter.h  IPgReader.h  IPgWriter.h  IResult.h  PgField.h  PgFormat.h  PgFunc.h  PgParamSetter.h  PgReader.h  PgResult.h  PgType.h  PgWriter.h  json.h
lib/inc/pg_json/utils/: GeneralParamSetter.h  PgResultWrapper.h  PgTextReader.h  PgTextWriter.h  RawCursor.h  StringBuffer.h
lib/src/: ByteOrder.h  Catalogue.cpp  CatalogueImpl.cpp  CatalogueImpl.h  Converter.cpp  ConverterImpl.cpp  ConverterImpl.h  PgBinaryReader.cpp  PgBinaryReader.h  PgBinaryWriter.cpp  PgBinaryWriter.h  PgField.h  PgFieldImpl.cpp  PgFieldImpl.h  PgFunc.cpp  PgFuncImpl.cpp  PgFuncImpl.h  PgReader.cpp  PgResultWrapper.h  PgTextReader.cpp  PgTextReader.h  PgTextWriter.cpp  PgTextWriter.h  PgType.h  PgTypeImpl.h  PgWriter.cpp  Scope.h
sql/: get_meta.sql
tests/: CMakeLists.txt  common.h  test_binary_parse.cpp  test_catalogue.cpp  test_complex_parse.cpp  test_parse.cpp  test_primitive_parse.cpp
tests/sql/: pfs_echo_complex.sql  pfs_person_t.sql  pfs_test_primitives.sql  pj_echo_complex.sql  pj_person_t.sql  pj_test_primitives.sql
